--- a/BookSpace/src/main/resources/templates/defaultException.html
+++ b/BookSpace/src/main/resources/templates/defaultException.html
@@ -19,6 +19,7 @@
                             <div class="col-md-6">
                                 <label th:for="ex">Exception</label>
                                 <p th:text="${ex.getClass()}">class</p>
+                                <p th:text="${ex.getClass()}">class</p>
                             </div>
                             <div class="col-md-6">
                                 <p th:text="${ex}">description</p>
